finished combining the two views, resolved the conflicts and aligned the content horizontally

--- a/web-1/Content/style.css
+++ b/web-1/Content/style.css
@@ -46,6 +46,17 @@ body {
     color: white;
 }
 
+#image10 {
+    background-image: url('../image/Image 10.png');
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
+
 .custom-card {
     padding-top:100px;
     padding-left:100px;
@@ -113,7 +124,9 @@ div.transbox a {
     background-color: #FF8C00;
 }
 .part-2 {
-    padding-top: 100px;
+    padding-top: 200px;
+    padding-left:0;
+    padding-right:0;
 }
 
 .image2 {
@@ -153,3 +166,36 @@ div.transbox a {
     z-index: 1;
     color: white;
 }
+
+.home {
+    position: relative;
+    display: table;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-position: center center;
+    background-image: url('../image/image1.png');
+}
+
+    div.transbox p {
+        font-size: xx-large;
+        font-weight: bold;
+        color: #ffffff;
+        top: 25%;
+        text-align: left;
+        left: 160px;
+        position: relative;
+        opacity: 1;
+        filter: alpha(opacity=60);
+    }
+
+.caption {
+    width: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 38%;
+    z-index: 1;
+    color: white;
+} 
